// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Article renders Search Articles with two articles 1`] = `
<div
  className=""
  style={
    Object {
      "marginTop": "4%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-98 MuiFormControl-marginNormal-99"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <label
          className="MuiFormLabel-root-107 MuiInputLabel-root-102 MuiInputLabel-formControl-103 MuiInputLabel-animated-106"
          data-shrink={false}
          htmlFor="query"
        >
          Search Hexanews
        </label>
        <div
          className="MuiInput-root-114 MuiInput-formControl-115 MuiInput-underline-118"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-122"
            defaultValue={undefined}
            disabled={false}
            id="query"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
  >
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={
        Object {
          "marginRight": 24,
        }
      }
    >
      <div
        className="MuiPaper-root-153 MuiPaper-elevation1-156 MuiPaper-rounded-154 MuiCard-root-152"
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-180"
        >
          <div
            className="MuiCardHeader-avatar-181"
          >
            <div
              className="MuiAvatar-root-186"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            />
          </div>
          <div
            className="MuiCardHeader-content-183"
          >
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiCardHeader-title-184"
            >
              
            </span>
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiTypography-colorTextSecondary-150 MuiCardHeader-subheader-185"
            >
              11 October 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardMedia-root-189"
          src={undefined}
          style={
            Object {
              "height": 0,
              "paddingTop": "50%",
            }
          }
        />
        <div
          className="MuiCardContent-root-191"
        >
          <h2
            className="MuiTypography-root-127 MuiTypography-headline-132 MuiTypography-gutterBottom-144"
          >
            abc
          </h2>
          <p
            className="MuiTypography-root-127 MuiTypography-body1-136"
          >
            test
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root-153 MuiPaper-elevation1-156 MuiPaper-rounded-154 MuiCard-root-152"
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-180"
        >
          <div
            className="MuiCardHeader-avatar-181"
          >
            <div
              className="MuiAvatar-root-186"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            />
          </div>
          <div
            className="MuiCardHeader-content-183"
          >
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiCardHeader-title-184"
            >
              
            </span>
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiTypography-colorTextSecondary-150 MuiCardHeader-subheader-185"
            >
              11 October 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardMedia-root-189"
          src={undefined}
          style={
            Object {
              "height": 0,
              "paddingTop": "50%",
            }
          }
        />
        <div
          className="MuiCardContent-root-191"
        >
          <h2
            className="MuiTypography-root-127 MuiTypography-headline-132 MuiTypography-gutterBottom-144"
          >
            def
          </h2>
          <p
            className="MuiTypography-root-127 MuiTypography-body1-136"
          >
            tester
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
</div>
`;

exports[`Search Article renders Search Articles with zero articles 1`] = `
<div
  className=""
  style={
    Object {
      "marginTop": "4%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-98 MuiFormControl-marginNormal-99"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <label
          className="MuiFormLabel-root-107 MuiInputLabel-root-102 MuiInputLabel-formControl-103 MuiInputLabel-animated-106"
          data-shrink={false}
          htmlFor="query"
        >
          Search Hexanews
        </label>
        <div
          className="MuiInput-root-114 MuiInput-formControl-115 MuiInput-underline-118"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-122"
            defaultValue={undefined}
            disabled={false}
            id="query"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
  >
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={
        Object {
          "marginRight": 24,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "marginTop": "5%",
          }
        }
      >
        <h3
          className="MuiTypography-root-127 MuiTypography-subheading-134"
        >
          We couldn't find any articles.
        </h3>
      </div>
    </div>
    <div
      className="MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
</div>
`;
